--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -9,21 +9,24 @@
 
     <ImageView
         android:id="@+id/imv_splash"
-        android:src="@drawable/f9_logo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content" />
+        android:scaleType="fitCenter"
+        android:src="@drawable/loading_logo_five9"
+        android:layout_height="match_parent"/>
 
     <ImageView
         android:id="@+id/imv_image"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/f9_logo"
+        android:visibility="gone"
+        android:src="@drawable/loading_logo_five9"
         android:layout_height="match_parent" />
 
     <VideoView
         android:id="@+id/video_view"
+        android:visibility="invisible"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_width="match_parent" />
