--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,4 +5,9 @@
             android:id="@+id/action_setting"
             android:orderInCategory="100"
             android:title="Setting" />
+
+    <item
+            android:id="@+id/action_close"
+            android:orderInCategory="100"
+            android:title="Close App" />
 </menu>
